# Lumison

./: .env.example  .gitignore  3D_AUDIO_CHECK.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  ICON_GENERATION.md  LYRICS_API_FLOW.md  PERFORMANCE_README.md  README.md  README.zh-CN.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_v1.0.2.md  SPEED_OPTIMIZATION.md  THEME_TRANSITION_UPDATE.md  UPDATE_CHECKLIST.md  YOUTUBE_MUSIC_README.md  build.ps1  build.sh  index.html  music-player.js  package-lock.json  package.json  particles-config.js  styles.css  tauri-dev.ps1  vite.config.ts
.github/: PROJECT_OVERVIEW.md
assets/: webWorkerBackground.worker-DV7Do3qe.js
docs/: 3D_EFFECT_CHECK.md  ALBUM_MODE.md  ALBUM_MODE_FEATURES.md  API_REFERENCE.md  AUDIO_FORMATS.md  AUDIO_SOURCES.md  BILIBILI_HARDWARE_DECODE.md  BUILD.md  DEVELOPMENT.md  GITHUB_SECRETS_SETUP.txt  GUIDE.md  INTERNET_ARCHIVE_INTEGRATION.md  INTERNET_ARCHIVE_QUICKSTART.md  LYRICS_DEBUG.md  LYRICS_EFFECTS.md  LYRICS_PRIORITY_VERIFICATION.md  LYRICS_SYSTEM.md  MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_I18N.md  PERFORMANCE_IMPROVEMENTS_2024.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_STRUCTURE.md  QUICK_PERFORMANCE_GUIDE.md  QUICK_REFERENCE.md  QUICK_UPLOAD.txt  README.md  README_INTERNET_ARCHIVE.md  RELEASE.md  RELEASE_GUIDE.md  STREAMING_INTEGRATION.md  UPDATE_SETUP.md  UPDATE_SETUP.zh-CN.md  YOUTUBE_MUSIC.md
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs  mobile.rs
(+150 files in other folders)
