[package]
name = "lumison"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Future dependencies for system-level features:
# windows = { version = "0.58", features = ["Win32_Media_Audio"] }  # For WASAPI
# cpal = "0.15"  # Cross-platform audio I/O (alternative to WASAPI)

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
